Correct way to format response.
