# swagger.yaml
@@ -26,241 +26,128 @@ paths:
       operationId: "getter"
       parameters: []
       responses:
-        200:
-          $ref: "#/responses/%2Asuccess%2A"
         default:
-          description: "AppError Type used to structure error reporting for popcube\
-            \ chat project."
-          headers:
-            detailed_error:
-              type: "string"
-              description: "Detail of error"
-            id:
-              type: "string"
-              description: "ID for the error"
-            is_oauth:
-              type: "boolean"
-            message:
-              type: "string"
-              description: "Error's message"
-            request_id:
-              type: "string"
-              description: "Id of the request if exist"
-            status_code:
-              type: "integer"
-              format: "int64"
-              description: "Error's status code"
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
   /avatar:
     get:
+      tags:
+      - "Avatars"
       summary: "Get avatars"
       description: "This will get all the avatars available in the organisation."
-      operationId: "Avatars"
+      operationId: "Avatar"
       parameters: []
       responses:
         200:
-          $ref: "#/responses/avatarArraySuccess"
+          description: "avatarSlice Array of avatars"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Avatar"
         503:
-          description: "AppError Type used to structure error reporting for popcube\
-            \ chat project."
-          headers:
-            detailed_error:
-              type: "string"
-              description: "Detail of error"
-            id:
-              type: "string"
-              description: "ID for the error"
-            is_oauth:
-              type: "boolean"
-            message:
-              type: "string"
-              description: "Error's message"
-            request_id:
-              type: "string"
-              description: "Id of the request if exist"
-            status_code:
-              type: "integer"
-              format: "int64"
-              description: "Error's status code"
+          description: "databaseError is an error object to tell what is happening\
+            \ when we encounter issue with database"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
         default:
-          description: "AppError Type used to structure error reporting for popcube\
-            \ chat project."
-          headers:
-            detailed_error:
-              type: "string"
-              description: "Detail of error"
-            id:
-              type: "string"
-              description: "ID for the error"
-            is_oauth:
-              type: "boolean"
-            message:
-              type: "string"
-              description: "Error's message"
-            request_id:
-              type: "string"
-              description: "Id of the request if exist"
-            status_code:
-              type: "integer"
-              format: "int64"
-              description: "Error's status code"
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
     post:
+      tags:
+      - "Avatars"
       summary: "New avatar"
       description: "This will create an avatar for organisation avatars library."
-      operationId: "Avatars"
+      operationId: "Avatar"
       parameters: []
       responses:
         200:
-          $ref: "#/responses/avatarObjectSuccess"
+          description: "avatarObjectSuccess list of avatars"
+          schema:
+            $ref: "#/definitions/Avatar"
+        422:
+          description: "wrongEntityError is an error object to inform that the provided\
+            \ object was not correctly formated"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
         503:
-          description: "AppError Type used to structure error reporting for popcube\
-            \ chat project."
-          headers:
-            detailed_error:
-              type: "string"
-              description: "Detail of error"
-            id:
-              type: "string"
-              description: "ID for the error"
-            is_oauth:
-              type: "boolean"
-            message:
-              type: "string"
-              description: "Error's message"
-            request_id:
-              type: "string"
-              description: "Id of the request if exist"
-            status_code:
-              type: "integer"
-              format: "int64"
-              description: "Error's status code"
+          description: "databaseError is an error object to tell what is happening\
+            \ when we encounter issue with database"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
         default:
-          description: "AppError Type used to structure error reporting for popcube\
-            \ chat project."
-          headers:
-            detailed_error:
-              type: "string"
-              description: "Detail of error"
-            id:
-              type: "string"
-              description: "ID for the error"
-            is_oauth:
-              type: "boolean"
-            message:
-              type: "string"
-              description: "Error's message"
-            request_id:
-              type: "string"
-              description: "Id of the request if exist"
-            status_code:
-              type: "integer"
-              format: "int64"
-              description: "Error's status code"
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
   /avatar/all:
     get:
+      tags:
+      - "Avatars"
       summary: "Get avatars"
       description: "This will get all the avatars available in the organisation."
-      operationId: "Avatars"
+      operationId: "Avatar"
       parameters: []
       responses:
         200:
-          $ref: "#/responses/avatarArraySuccess"
+          description: "avatarSlice Array of avatars"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Avatar"
         503:
-          description: "AppError Type used to structure error reporting for popcube\
-            \ chat project."
-          headers:
-            detailed_error:
-              type: "string"
-              description: "Detail of error"
-            id:
-              type: "string"
-              description: "ID for the error"
-            is_oauth:
-              type: "boolean"
-            message:
-              type: "string"
-              description: "Error's message"
-            request_id:
-              type: "string"
-              description: "Id of the request if exist"
-            status_code:
-              type: "integer"
-              format: "int64"
-              description: "Error's status code"
+          description: "databaseError is an error object to tell what is happening\
+            \ when we encounter issue with database"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
         default:
-          description: "AppError Type used to structure error reporting for popcube\
-            \ chat project."
-          headers:
-            detailed_error:
-              type: "string"
-              description: "Detail of error"
-            id:
-              type: "string"
-              description: "ID for the error"
-            is_oauth:
-              type: "boolean"
-            message:
-              type: "string"
-              description: "Error's message"
-            request_id:
-              type: "string"
-              description: "Id of the request if exist"
-            status_code:
-              type: "integer"
-              format: "int64"
-              description: "Error's status code"
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+  /avatar/link/:avatarLink:
+    get:
+      tags:
+      - "Avatars"
+      summary: "Get avatar from link"
+      description: "This will return the avatar object corresponding to provided link"
+      operationId: "Avatar"
+      parameters: []
+      responses:
+        200:
+          description: "avatarObjectSuccess list of avatars"
+          schema:
+            $ref: "#/definitions/Avatar"
+        503:
+          description: "databaseError is an error object to tell what is happening\
+            \ when we encounter issue with database"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
+        default:
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
   /avatar/new:
     post:
+      tags:
+      - "Avatars"
       summary: "New avatar"
       description: "This will create an avatar for organisation avatars library."
-      operationId: "Avatars"
+      operationId: "Avatar"
       parameters: []
       responses:
         200:
-          $ref: "#/responses/avatarObjectSuccess"
+          description: "avatarObjectSuccess list of avatars"
+          schema:
+            $ref: "#/definitions/Avatar"
         503:
-          description: "AppError Type used to structure error reporting for popcube\
-            \ chat project."
-          headers:
-            detailed_error:
-              type: "string"
-              description: "Detail of error"
-            id:
-              type: "string"
-              description: "ID for the error"
-            is_oauth:
-              type: "boolean"
-            message:
-              type: "string"
-              description: "Error's message"
-            request_id:
-              type: "string"
-              description: "Id of the request if exist"
-            status_code:
-              type: "integer"
-              format: "int64"
-              description: "Error's status code"
+          description: "databaseError is an error object to tell what is happening\
+            \ when we encounter issue with database"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
         default:
-          description: "AppError Type used to structure error reporting for popcube\
-            \ chat project."
-          headers:
-            detailed_error:
-              type: "string"
-              description: "Detail of error"
-            id:
-              type: "string"
-              description: "ID for the error"
-            is_oauth:
-              type: "boolean"
-            message:
-              type: "string"
-              description: "Error's message"
-            request_id:
-              type: "string"
-              description: "Id of the request if exist"
-            status_code:
-              type: "integer"
-              format: "int64"
-              description: "Error's status code"
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
   /panic:
     get:
       tags:
@@ -270,30 +157,10 @@ paths:
       operationId: "getter"
       parameters: []
       responses:
-        500:
-          $ref: "#/responses/%2Asuccess%2A"
         default:
-          description: "AppError Type used to structure error reporting for popcube\
-            \ chat project."
-          headers:
-            detailed_error:
-              type: "string"
-              description: "Detail of error"
-            id:
-              type: "string"
-              description: "ID for the error"
-            is_oauth:
-              type: "boolean"
-            message:
-              type: "string"
-              description: "Error's message"
-            request_id:
-              type: "string"
-              description: "Id of the request if exist"
-            status_code:
-              type: "integer"
-              format: "int64"
-              description: "Error's status code"
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
   /ping:
     get:
       tags:
@@ -303,30 +170,10 @@ paths:
       operationId: "getter"
       parameters: []
       responses:
-        200:
-          $ref: "#/responses/%2Asuccess%2A"
         default:
-          description: "AppError Type used to structure error reporting for popcube\
-            \ chat project."
-          headers:
-            detailed_error:
-              type: "string"
-              description: "Detail of error"
-            id:
-              type: "string"
-              description: "ID for the error"
-            is_oauth:
-              type: "boolean"
-            message:
-              type: "string"
-              description: "Error's message"
-            request_id:
-              type: "string"
-              description: "Id of the request if exist"
-            status_code:
-              type: "integer"
-              format: "int64"
-              description: "Error's status code"
+          description: "genericError general error when unexpected errors occured"
+          schema:
+            $ref: "#/definitions/genericErrorModel"
 definitions:
   Avatar:
     type: "object"
@@ -731,26 +578,77 @@ definitions:
       \ Each user is unique inside a given organisation, but users are not shared\
       \ between\norganisations. Required apply only for creation of the object."
     x-go-package: "github.com/titouanfreville/popcubeapi/models"
-responses:
-  genericError:
-    description: "AppError Type used to structure error reporting for popcube chat\
-      \ project."
-    headers:
+  genericErrorModel:
+    type: "object"
+    properties:
       detailed_error:
         type: "string"
         description: "Detail of error"
+        x-go-name: "DetailedError"
       id:
         type: "string"
         description: "ID for the error"
+        x-go-name: "ID"
       is_oauth:
         type: "boolean"
+        x-go-name: "IsOAuth"
       message:
         type: "string"
         description: "Error's message"
+        x-go-name: "Message"
       request_id:
         type: "string"
         description: "Id of the request if exist"
+        x-go-name: "RequestID"
       status_code:
         type: "integer"
         format: "int64"
-        description: "Error's status code"
+        description: "EgenericErrorModelrror's status code"
+        x-go-name: "StatusCode"
+    title: "AppError Type used to structure error reporting for popcube chat project."
+    x-go-name: "AppError"
+    x-go-package: "github.com/titouanfreville/popcubeapi/utils"
+responses:
+  avatarArraySuccess:
+    description: "avatarSlice Array of avatars"
+    schema:
+      type: "array"
+      items:
+        $ref: "#/definitions/Avatar"
+  avatarObjectSuccess:
+    description: "avatarObjectSuccess list of avatars"
+    schema:
+      $ref: "#/definitions/Avatar"
+  databaseError:
+    description: "databaseError is an error object to tell what is happening when\
+      \ we encounter issue with database"
+    schema:
+      $ref: "#/definitions/genericErrorModel"
+  defaultOk:
+    description: "generalOk default object style to return if correct"
+  deleteMessage:
+    description: "deleteMessage return object to confirm correct deletion of an item."
+    schema:
+      type: "object"
+      properties: {}
+    headers:
+      message:
+        type: "string"
+        description: "More information about why is it or isn't it removed"
+      removed_object: null
+      status:
+        type: "integer"
+        format: "int64"
+        description: "Status"
+      success:
+        type: "boolean"
+        description: "Correctly removed ?"
+  genericError:
+    description: "genericError general error when unexpected errors occured"
+    schema:
+      $ref: "#/definitions/genericErrorModel"
+  wrongEntity:
+    description: "wrongEntityError is an error object to inform that the provided\
+      \ object was not correctly formated"
+    schema:
+      $ref: "#/definitions/genericErrorModel"
